<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StreamActivity" >

    <Button
        android:id="@+id/connectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/IPField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/connectText" />

    <TextView
        android:id="@+id/serverIPText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/IPField"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="83dp"
        android:text="@string/serverIPText"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/IPField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="156dp"
        android:ems="10"
        android:text="@string/IPField" />

</RelativeLayout>